<resources>
    <string name="app_name">FoodExc</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favourite_recipes_fragment">Favorites</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="finger_food">Finger Food</string>
    <string name="marinade">Marinade</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="soup">Soup</string>
    <string name="breakfast">Breakfast</string>
    <string name="bread">Bread</string>
    <string name="salad">Salad</string>
    <string name="appetizer">Appetizer</string>
    <string name="dessert">Dessert</string>
    <string name="american">American</string>
    <string name="british">British</string>
    <string name="chinese">Chinese</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="greek">Greek</string>
    <string name="indian">Indian</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="mexican">Mexican</string>
    <string name="middle_eastern">Middle Eastern</string>
    <string name="spanish">Spanish</string>
    <string name="thai">Thai</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="apply">Apply</string>
    <string name="cuisines">Cuisines</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegeterian</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="_100">100</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="grams">Grams</string>
    <string name="consistency">Consistency</string>
    <string name="original">Original</string>
    <string name="costly">Costly</string>
</resources>